Update API docs from recent XMR pull.
